--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
-  <link rel="icon" type="image/x-icon" href="assets/images/fav.png">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon/fav.png">
   <link rel="stylesheet" href="style/index.css">
   <link rel="stylesheet" href="style/switch.css">
 </head>
@@ -18,8 +18,8 @@
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#resume">Education & Skills</a>
-        <a href="#blog">Gallery</a>
-        <a href="#portfolio">My Projects</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#projects">My Projects</a>
         <a href="#contact">Contact</a>
       </div>
     </div>
@@ -27,24 +27,24 @@
 
   <!-- ================= Home ================= -->
   <section id="home" class="landing-wrapper">
-    <img src="assets/images/val.png" alt="profile-picture" class="profile-pic">
+    <img src="assets/images/profile/val.png" alt="profile-picture">
     <div class="landing-container">
       <div class="floating-icon">⚡</div>
       <h1>Valiant S. Mi-ing</h1>
-      <h2>System Developer</h2>
+      <h2>System / Web Developer</h2>
       <br>
       <p>A showcase of my work, skills, and passion for System and Web Development.  
       Explore projects, experience, and more below.
       </p>  
       <div class="icons">
         <a href="https://www.facebook.com/" target="_blank">
-          <img src="assets/images/contacts/facebook (1).png" class="yellow-icon" alt="facebook-logo">
+          <img src="assets/images/soc/facebook (1).png" alt="facebook-logo">
         </a>
         <a href="mailto:">
-          <img src="assets/images/contacts/instagram.png" class="yellow-icon" alt="gmail-logo">
+          <img src="assets/images/soc/instagram.png" alt="gmail-logo">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-          <img src="assets/images/contacts/linkedin.png" class="yellow-icon" alt="linkedin-logo">
+          <img src="assets/images/soc/linkedin.png" alt="linkedin-logo">
         </a>
       </div>
     </div>
@@ -100,8 +100,8 @@
 
     <!-- Resume Section -->
     <section id="resume" class="content-section">
-      <div class="about-section">
-        <h3><span class="icon">🎓</span> Education</h3>
+      <div>
+        <h2><span class="icon">🎓</span> Education</h2>
         <div class="about-item">
           <h4 class="shool">Saint Louis University <span class="date">2020 - 2025</span></h4>
           <p>Bachelor of Science in Information Technology</p>
@@ -122,8 +122,8 @@
         <br>
       </div>
 
-      <div class="about-section">
-        <h3><span class="icon">💼</span> Experience</h3>
+      <div>
+        <h2><span class="icon">💼</span> Experience</h2>
         <div class="about-item">
           <h4 class="experience">Technical Support (Intern) <span class="date">January 2025 - May 2025</span></h4>
           <p>Developed a web application for webinar training management for teachers and enhanced and suggest improvement
@@ -133,8 +133,8 @@
       </div>
       <br>
 
-      <div class="about-section">
-        <h3><span class="icon">🔥</span> My Skills</h3>
+      <div>
+        <h2><span class="icon">🔥</span> My Skills</h2>
         
         <div class="skill">
           <h4>Programming Language</h4>
@@ -199,8 +199,8 @@
       </div>
     </section>
 
-    <!-- Blog Section -->
-    <section id="blog" class="content-section">
+    <!-- Gallery Section -->
+    <section id="gallery" class="content-section">
       <h2>Gallery</h2>
       <div class="card-container">
         <div class="card">
@@ -230,22 +230,22 @@
       </div>
     </section>
 
-    <!-- Portfolio Section -->
-    <section id="portfolio" class="content-section">
+    <!-- My Project Section -->
+    <section id="projects" class="content-section">
       <h2>My Projects</h2>
       <div class="card-container">
         <div class="card">
-          <img src="assets/images/image.png">
+          <img src="assets/images/profile/image.png">
           <h3>Kultoura</h3>
           <p>This is a  </p>
         </div>
         <div class="card">
-          <img src="assets/images/image.png">
+          <img src="assets/images/profile/image.png">
           <h3>Wordy Game</h3>
           <p>This is asd </p>
         </div>
         <div class="card">
-          <img src="assets/images/image.png">
+          <img src="assets/images/profile/image.png">
           <h3>Document Reviewer Web Application</h3>
           <p>This is asd </p>
         </div>  
@@ -257,17 +257,17 @@
       <h2>Achievements</h2>
       <div class="card-container">
         <div class="card">
-          <img src="assets/images/image.png">
+          <img src="assets/images/profile/image.png">
           <h3>Kultoura</h3>
           <p>This is a  </p>
         </div>
         <div class="card">
-          <img src="assets/images/image.png">
+          <img src="assets/images/profile/image.png">
           <h3>Wordy Game</h3>
           <p>This is asd </p>
         </div>
         <div class="card">
-          <img src="assets/images/image.png">
+          <img src="assets/images/profile/image.png">
           <h3>Document Reviewer</h3>
           <p>This is asd </p>
         </div>  
