--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="landing-container">
       <div class="floating-icon">⚡</div>
       <h1>Valiant S. Mi-ing</h1>
-      <h2>System / Web Developer</h2>
+      <h2>System Developer</h2>
       <br>
       <p>A showcase of my work, skills, and passion for System and Web Development.  
       Explore projects, experience, and more below.
@@ -103,19 +103,19 @@
       <div>
         <h2><span class="icon">🎓</span> Education</h2>
         <div class="about-item">
-          <h4 class="shool">Saint Louis University <span class="date">2020 - 2025</span></h4>
+          <h3 class="shool">Saint Louis University <span class="date">2020 - 2025</span></h3>
           <p>Bachelor of Science in Information Technology</p>
           <p class="school-address">Baguio City, Philippines</p>
         </div>
         <br>
         <div class="about-item">
-          <h4 class="shool">Mankayan National High School <span class="date">2020 - 2018</span></h4>
+          <h3 class="shool">Mankayan National High School <span class="date">2020 - 2018</span></h3>
           <p>Senior High School</p>
           <p class="school-address">Benguet, Philippines</p>
         </div>
         <br>
         <div class="about-item">
-          <h4 class="shool">Mankayan National High School <span class="date">2014 - 2018</span></h4>
+          <h3 class="shool">Mankayan National High School <span class="date">2014 - 2018</span></h3>
           <p>Junior High School</p>
           <p class="school-address">Benguet, Philippines</p>
         </div>
@@ -125,7 +125,7 @@
       <div>
         <h2><span class="icon">💼</span> Experience</h2>
         <div class="about-item">
-          <h4 class="experience">Technical Support (Intern) <span class="date">January 2025 - May 2025</span></h4>
+          <h3 class="experience">Technical Support (Intern) <span class="date">January 2025 - May 2025</span></h3>
           <p>Developed a web application for webinar training management for teachers and enhanced and suggest improvement
             of the company website.
           </p>
@@ -137,62 +137,62 @@
         <h2><span class="icon">🔥</span> My Skills</h2>
         
         <div class="skill">
-          <h4>Programming Language</h4>
+          <h3>Programming Language</h3>
           <br>
-          <span class="skill-title">Java</span>
+          <span class="skill-title"> <img src="assets/images/java.png"> </span>Java</span>
             <span class="skill-percent">80%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 80%;"></div></div>
           </div>
           <div class="skill">
-            <span class="skill-title">Python</span>
+            <span class="skill-title"> <img src="assets/images/python.png"> Python</span>
             <span class="skill-percent">35%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 35%;"></div></div>
           </div>
           <div class="skill">
             
-            <h4>Web Developement</h4>
+          <h3>Web Developement</h3>
             <br>
-            <span class="skill-title">Php</span>
+            <span class="skill-title"><img src="assets/images/php.png">Php</span>
             <span class="skill-percent">65%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 65%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title">HTML</span>
+            <span class="skill-title"> <img src="assets/images/html-5.png">HTML</span>
             <span class="skill-percent">65%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 65%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title">Javascript</span>
+            <span class="skill-title"><img src="assets/images/js.png">Javascript</span>
             <span class="skill-percent">55%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 55%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title">CSS</span>
+            <span class="skill-title"><img src="assets/images/css-3.png">CSS</span>
             <span class="skill-percent">45%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 45%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title">Wordpress</span>
+            <span class="skill-title"><img src="assets/images/wordpress.png">Wordpress</span>
             <span class="skill-percent">40%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 40%;"></div></div>
           </div>
 
-           <h4>Database Management</h4>
+          <h3>Database Management</h3>
             <br>
           <div class="skill">
-            <span class="skill-title">MySQL</span>
+            <span class="skill-title"><img src="assets/images/mysql.png">MySQL</span>
             <span class="skill-percent">75%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 75%;"></div></div>
           </div>
 
-          <h4>Version Control</h4>
+          <h3>Version Control</h3>
           <br>
           <div class="skill">
-            <span class="skill-title">Git</span>
+            <span class="skill-title"><img src="assets/images/social.png">Git</span>
             <span class="skill-percent">60%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 60%;"></div></div>
           </div>
@@ -237,7 +237,7 @@
         <div class="card">
           <img src="assets/images/profile/image.png">
           <h3>Kultoura</h3>
-          <p>This is a  </p>
+          <p>This is a web application </p>
         </div>
         <div class="card">
           <img src="assets/images/profile/image.png">
