--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
       <div>
         <h2><span class="icon">💼</span> Experience</h2>
         <div class="about-item">
-          <h3 class="experience">Technical Support (Intern) <span class="date">January 2025 - May 2025</span></h3>
-          <p>Developed a web application for webinar training management for teachers and enhanced and suggest improvement
+          <h3>Technical Support (Intern) <span class="date">January 2025 - May 2025</span></h3>
+          <p class="experience">Developed a web application for webinar training management for teachers and enhanced and suggest improvement
             of the company website.
           </p>
         </div>
@@ -139,12 +139,12 @@
         <div class="skill">
           <h3>Programming Language</h3>
           <br>
-          <span class="skill-title"> <img src="assets/images/java.png"> </span>Java</span>
+          <span class="skill-title"> <img src="assets/images/skills/java.png"> </span>Java</span>
             <span class="skill-percent">80%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 80%;"></div></div>
           </div>
           <div class="skill">
-            <span class="skill-title"> <img src="assets/images/python.png"> Python</span>
+            <span class="skill-title"> <img src="assets/images/skills/python.png"> Python</span>
             <span class="skill-percent">35%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 35%;"></div></div>
           </div>
@@ -152,31 +152,31 @@
             
           <h3>Web Developement</h3>
             <br>
-            <span class="skill-title"><img src="assets/images/php.png">Php</span>
+            <span class="skill-title"><img src="assets/images/skills/php.png">Php</span>
             <span class="skill-percent">65%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 65%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title"> <img src="assets/images/html-5.png">HTML</span>
+            <span class="skill-title"> <img src="assets/images/skills/html-5.png">HTML</span>
             <span class="skill-percent">65%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 65%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title"><img src="assets/images/js.png">Javascript</span>
+            <span class="skill-title"><img src="assets/images/skills/js.png">Javascript</span>
             <span class="skill-percent">55%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 55%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title"><img src="assets/images/css-3.png">CSS</span>
+            <span class="skill-title"><img src="assets/images/skills/css-3.png">CSS</span>
             <span class="skill-percent">45%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 45%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title"><img src="assets/images/wordpress.png">Wordpress</span>
+            <span class="skill-title"><img src="assets/images/skills/wordpress.png">Wordpress</span>
             <span class="skill-percent">40%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 40%;"></div></div>
           </div>
@@ -184,7 +184,7 @@
           <h3>Database Management</h3>
             <br>
           <div class="skill">
-            <span class="skill-title"><img src="assets/images/mysql.png">MySQL</span>
+            <span class="skill-title"><img src="assets/images/skills/mysql.png">MySQL</span>
             <span class="skill-percent">75%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 75%;"></div></div>
           </div>
@@ -192,7 +192,7 @@
           <h3>Version Control</h3>
           <br>
           <div class="skill">
-            <span class="skill-title"><img src="assets/images/social.png">Git</span>
+            <span class="skill-title"><img src="assets/images/skills/git.png">Git</span>
             <span class="skill-percent">60%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 60%;"></div></div>
           </div>
