--- a/index.html
+++ b/index.html
@@ -70,29 +70,35 @@
       </p>
 
       <h2>Interest</h2>
-      <div class="card-container">
+      <div class="card-container-interest">
         <div class="card">
           <h3>System Development</h3>
+          <img class="sys" src="assets/images/giphy.gif"> 
           <p>High-quality development of responsive and dynamic websites at the professional level.</p>
         </div>
         <div class="card">
           <h3>Web Applications</h3>
+          <img class="sys" src="assets/images/web.gif"> 
           <p>Professional development of scalable and secure web applications for businesses and organizations.</p>
         </div>
         <div class="card">
           <h3>Database Management</h3>
+          <img class="sys" src="assets/images/dbms.gif"> 
           <p>Designing, optimizing, and managing relational and non-relational databases for efficiency and reliability.</p>
         </div>
         <div class="card">
           <h3>Solving Sudoku </h3>
+          <img class="sys" src="assets/images/game-school.gif">
           <p>Solving Sudoku to sharpen logical thinking and problem-solving skills.</p>
         </div>
         <div class="card">
           <h3>Photography</h3>
+          <img class="sys" src="assets/images/photo.gif">
           <p>Capturing moments and creating visual stories through quality photos.</p>
         </div>
         <div class="card">
           <h3>Mobile and PC Games</h3>
+          <img class="sys" src="assets/images/game.gif">
           <p>Call of Duty (Mobile) & Dota 2</p>
         </div>
       </div>
@@ -134,7 +140,7 @@
       <br>
 
       <div>
-        <h2><span class="icon">🔥</span> My Skills</h2>
+        <h2><span class="icon">🔥</span> Technical Skills</h2>
         
         <div class="skill">
           <h3>Programming Language</h3>
