Added interest images

--- a/index.html
+++ b/index.html
@@ -72,34 +72,34 @@
       <h2>Interest</h2>
       <div class="card-container-interest">
         <div class="card">
-          <h3>System Development</h3>
-          <img class="sys" src="assets/images/giphy.gif"> 
-          <p>High-quality development of responsive and dynamic websites at the professional level.</p>
+          <h3>Software Development</h3>
+          <img class="sys" src="assets/images/interest/pexels-fauxels-3182773.jpg"> 
+          <p>Building efficient and maintainable software solutions using modern development practices and tools.</p>
         </div>
         <div class="card">
-          <h3>Web Applications</h3>
-          <img class="sys" src="assets/images/web.gif"> 
-          <p>Professional development of scalable and secure web applications for businesses and organizations.</p>
+          <h3>Web Development</h3>
+          <img class="sys" src="assets/images/interest/web dev.png"> 
+          <p>Creating responsive and user-friendly web applications and websites using HTML, CSS, JavaScript, and web frameworks.</p>
         </div>
         <div class="card">
           <h3>Database Management</h3>
-          <img class="sys" src="assets/images/dbms.gif"> 
-          <p>Designing, optimizing, and managing relational and non-relational databases for efficiency and reliability.</p>
+          <img class="sys" src="assets/images/interest/pexels-cookiecutter-17489150.jpg"> 
+          <p>Designing and managing relational databases to ensure data integrity and performance.</p>
         </div>
         <div class="card">
           <h3>Solving Sudoku </h3>
-          <img class="sys" src="assets/images/game-school.gif">
-          <p>Solving Sudoku to sharpen logical thinking and problem-solving skills.</p>
+          <img class="sys" src="assets/images/interest/suduko.png">
+          <p>Enhancing logical thinking and pattern recognition through puzzle solving and brain games.</p>
         </div>
         <div class="card">
-          <h3>Photography</h3>
-          <img class="sys" src="assets/images/photo.gif">
-          <p>Capturing moments and creating visual stories through quality photos.</p>
+          <h3>Judo</h3>
+          <img class="sys" src="assets/images/interest/pexels-kampus-6765029.jpg">
+          <p>Practicing discipline, focus, and physical fitness through martial arts and competitive training.</p>
         </div>
         <div class="card">
           <h3>Mobile and PC Games</h3>
-          <img class="sys" src="assets/images/game.gif">
-          <p>Call of Duty (Mobile) & Dota 2</p>
+          <img class="sys" src="assets/images/interest/pexels-jeshoots-com-147458-442576.jpg">
+          <p>Exploring game mechanics and team strategies through titles like Call of Duty (Mobile) and Dota 2.</p>
         </div>
       </div>
     </section>
@@ -241,17 +241,17 @@
       <h2>My Projects</h2>
       <div class="card-container">
         <div class="card">
-          <img src="assets/images/profile/image.png">
+          <img src="assets/images/image.png">
           <h3>Kultoura</h3>
           <p>This is a web application </p>
         </div>
         <div class="card">
-          <img src="assets/images/profile/image.png">
+          <img src="assets/images/image.png">
           <h3>Wordy Game</h3>
           <p>This is asd </p>
         </div>
         <div class="card">
-          <img src="assets/images/profile/image.png">
+          <img src="assets/images/image.png">
           <h3>Document Reviewer Web Application</h3>
           <p>This is asd </p>
         </div>  
@@ -263,17 +263,17 @@
       <h2>Achievements</h2>
       <div class="card-container">
         <div class="card">
-          <img src="assets/images/profile/image.png">
+          <img src="assets/images/image.png">
           <h3>Kultoura</h3>
           <p>This is a  </p>
         </div>
         <div class="card">
-          <img src="assets/images/profile/image.png">
+          <img src="assets/images/image.png">
           <h3>Wordy Game</h3>
           <p>This is asd </p>
         </div>
         <div class="card">
-          <img src="assets/images/profile/image.png">
+          <img src="assets/images/image.png">
           <h3>Document Reviewer</h3>
           <p>This is asd </p>
         </div>  
