Testing bootstrap carousel

--- a/index.html
+++ b/index.html
@@ -71,32 +71,32 @@
 
       <h2>Interest</h2>
       <div class="card-container-interest">
-        <div class="card">
+        <div class="card-two">
           <h3>Software Development</h3>
           <img class="sys" src="assets/images/interest/pexels-fauxels-3182773.jpg"> 
           <p>Building efficient and maintainable software solutions using modern development practices and tools.</p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <h3>Web Development</h3>
           <img class="sys" src="assets/images/interest/web dev.png"> 
           <p>Creating responsive and user-friendly web applications and websites using HTML, CSS, JavaScript, and web frameworks.</p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <h3>Database Management</h3>
           <img class="sys" src="assets/images/interest/pexels-cookiecutter-17489150.jpg"> 
           <p>Designing and managing relational databases to ensure data integrity and performance.</p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <h3>Solving Sudoku </h3>
           <img class="sys" src="assets/images/interest/suduko.png">
           <p>Enhancing logical thinking and pattern recognition through puzzle solving and brain games.</p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <h3>Judo</h3>
           <img class="sys" src="assets/images/interest/pexels-kampus-6765029.jpg">
           <p>Practicing discipline, focus, and physical fitness through martial arts and competitive training.</p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <h3>Mobile and PC Games</h3>
           <img class="sys" src="assets/images/interest/pexels-jeshoots-com-147458-442576.jpg">
           <p>Exploring game mechanics and team strategies through titles like Call of Duty (Mobile) and Dota 2.</p>
@@ -207,29 +207,32 @@
 
     <!-- Gallery Section -->
     <section id="gallery" class="content-section">
+
+
+
       <h2>Gallery</h2>
       <div class="card-container">
-        <div class="card">
+        <div class="card-two">
           <h3>Image Title 1</h3>
           <p>Quick excerpt of your blog postasdasdasdasdasdasdasa.</p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <h3>Image Title 2</h3>
           <p>Quick excerpt of your blogasdasdasdasdasd post.</p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <h3>Image Title 3</h3>
           <p>Quick excerpt of your blogasdasdasdasdasdasdasdaaas post.</p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <h3>Image Title 4</h3>
           <p>Quick excerpt of your blogasdasdasdasd post.</p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <h3>Image Title 5</h3>
           <p>Quick excerpt of your blog pasdasdasdasdasd asdasd asdas ost.</p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <h3>Image Title 6</h3>
           <p>Quick excerpt of your blog asasdas asdasd   post.</p>
         </div>
@@ -240,17 +243,17 @@
     <section id="projects" class="content-section">
       <h2>My Projects</h2>
       <div class="card-container">
-        <div class="card">
+        <div class="card-two">
           <img src="assets/images/image.png">
           <h3>Kultoura</h3>
           <p>This is a web application </p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <img src="assets/images/image.png">
           <h3>Wordy Game</h3>
           <p>This is asd </p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <img src="assets/images/image.png">
           <h3>Document Reviewer Web Application</h3>
           <p>This is asd </p>
@@ -258,21 +261,21 @@
       </div>
     </section>
 
-    <!-- Achiements Section -->
+    <!-- Achiements Section --> 
     <section id="achievements" class="content-section">
       <h2>Achievements</h2>
       <div class="card-container">
-        <div class="card">
+        <div class="card-two">
           <img src="assets/images/image.png">
           <h3>Kultoura</h3>
           <p>This is a  </p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <img src="assets/images/image.png">
           <h3>Wordy Game</h3>
           <p>This is asd </p>
         </div>
-        <div class="card">
+        <div class="card-two">
           <img src="assets/images/image.png">
           <h3>Document Reviewer</h3>
           <p>This is asd </p>
