--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="card-two">
           <h3>Mobile and PC Games</h3>
           <img class="sys" src="assets/images/interest/pexels-jeshoots-com-147458-442576.jpg">
-          <p>Exploring game mechanics and team strategies through titles like Call of Duty (Mobile) and Dota 2.</p>
+          <p>Exploring game mechanics and team strategies through games like Call of Duty (Mobile) and Dota 2.</p>
         </div>
       </div>
     </section>
