--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <img src="assets/images/soc/linkedin.png" alt="linkedin-logo">
         </a>
       </div>
+      <a onclick="openGmailCompose()" class="btn-enter">Hire Me!</a>
     </div>
   </section>
 
@@ -246,17 +247,17 @@
         <div class="card-two">
           <img src="assets/images/image.png">
           <h3>Kultoura</h3>
-          <p>This is a web application </p>
+          <p>Thesis </p>
         </div>
         <div class="card-two">
           <img src="assets/images/image.png">
           <h3>Wordy Game</h3>
-          <p>This is asd </p>
+          <p>Corba Application </p>
         </div>
         <div class="card-two">
           <img src="assets/images/image.png">
           <h3>Document Reviewer Web Application</h3>
-          <p>This is asd </p>
+          <p>Document Reviewer</p>
         </div>  
       </div>
     </section>
