--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
   <!-- =============== Nav Bar =============== -->
   <nav class="nav-box">
     <div class="top-nav"> 
-      <h1>Portfolio</h1>
+      <h1>Portfolio</h1>  
       <div class="nav-links">
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
-        <a href="#resume">Education & Skills</a>
         <a href="#gallery">Gallery</a>
         <a href="#projects">My Projects</a>
         <a href="#contact">Contact</a>
@@ -30,24 +29,17 @@
     <img src="assets/images/profile/val.png" alt="profile-picture">
     <div class="landing-container">
       <div class="floating-icon">⚡</div>
-      <h1>Valiant S. Mi-ing</h1>
-      <h2>System Developer</h2>
+      <h1>Name</h1>
+      <h2>Roles</h2>
       <br>
       <p>A showcase of my work, skills, and passion for System and Web Development.  
       Explore projects, experience, and more below.
       </p>  
-      <div class="icons">
-        <a href="https://www.facebook.com/" target="_blank">
-          <img src="assets/images/soc/facebook (1).png" alt="facebook-logo">
-        </a>
-        <a href="mailto:">
-          <img src="assets/images/soc/instagram.png" alt="gmail-logo">
-        </a>
-        <a href="https://www.linkedin.com/" target="_blank">
-          <img src="assets/images/soc/linkedin.png" alt="linkedin-logo">
-        </a>
+    
+      <div class="btn-group">
+        <a href="#contact" class="btn-enter">Hire Me!</a>
+        <a href="assets/portfolio.pdf" class="btn-enter" download>Download Resume</a>
       </div>
-      <a onclick="openGmailCompose()" class="btn-enter">Hire Me!</a>
     </div>
   </section>
 
@@ -208,9 +200,6 @@
 
     <!-- Gallery Section -->
     <section id="gallery" class="content-section">
-
-
-
       <h2>Gallery</h2>
       <div class="card-container">
         <div class="card-two">
@@ -289,7 +278,21 @@
       <h2>Contact</h2>
       <p>If you’d like to get in touch, feel free to reach out via email or connect with me on LinkedIn.</p>
       <p>Email: <a href="mailto:miingvaliant@gmail.com">miingvaliant@gmail.com</a></p>
+
+       <div class="icons">
+        <a href="https://www.facebook.com/" target="_blank">
+          <img src="assets/images/soc/facebook (1).png" alt="facebook-logo">
+        </a>
+        <a href="mailto:">
+          <img src="assets/images/soc/instagram.png" alt="gmail-logo">
+        </a>
+        <a href="https://www.linkedin.com/" target="_blank">
+          <img src="assets/images/soc/linkedin.png" alt="linkedin-logo">
+        </a>
+      </div>
     </section>
+
+    
 
     <div class="map-container">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1913.5852419980192!2d120.57181008864467!3d16.416165738438767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3391a1003aebf95b%3A0x4cbc05568cc663f7!2sQuezon%20Hill%20road!5e0!3m2!1sen!2sph!4v1759200050674!5m2!1sen!2sph" 
