--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#about">About</a>
         <a href="#gallery">Gallery</a>
         <a href="#projects">My Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact-section">Contact</a>
       </div>
     </div>
   </nav>
@@ -29,16 +29,16 @@
     <img src="assets/images/profile/val.png" alt="profile-picture">
     <div class="landing-container">
       <div class="floating-icon">⚡</div>
-      <h1>Name</h1>
-      <h2>Roles</h2>
+      <h1>Valiant S. Mi-ing</h1>
+      <h2>System Developer</h2>
       <br>
       <p>A showcase of my work, skills, and passion for System and Web Development.  
       Explore projects, experience, and more below.
       </p>  
     
       <div class="btn-group">
-        <a href="#contact" class="btn-enter">Hire Me!</a>
-        <a href="assets/portfolio.pdf" class="btn-enter" download>Download Resume</a>
+        <a href="#contact-section" class="btn-enter">Hire Me</a>
+        <a href="assets/Mi-ing,Valiant-Portfolio.pdf" class="btn-enter" download>Download Resume</a>
       </div>
     </div>
   </section>
@@ -271,15 +271,7 @@
           <p>This is asd </p>
         </div>  
       </div>  
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="content-section">
-      <h2>Contact</h2>
-      <p>If you’d like to get in touch, feel free to reach out via email or connect with me on LinkedIn.</p>
-      <p>Email: <a href="mailto:miingvaliant@gmail.com">miingvaliant@gmail.com</a></p>
-
-       <div class="icons">
+        <!-- <div class="icons">
         <a href="https://www.facebook.com/" target="_blank">
           <img src="assets/images/soc/facebook (1).png" alt="facebook-logo">
         </a>
@@ -288,11 +280,66 @@
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
           <img src="assets/images/soc/linkedin.png" alt="linkedin-logo">
-        </a>
+        </a> -->
+    </section>
+
+    <!-- Contact Section -->
+    <!-- <section id="contact" class="content-section">
+      <h2>Contact</h2>
+      <p>If you’d like to get in touch, feel free to reach out via email or connect with me on LinkedIn.</p>
+      <p>Email: <a href="mailto:miingvaliant@gmail.com">miingvaliant@gmail.com</a></p>
+
+    </section> -->
+
+    <section id="contact-section">
+      <div class="contact-wrapper">
+
+        <!-- Left Side Contact Info -->
+        <div class="contact-left">
+          <h2 class="contact-heading">Get In Touch With Me Now!</h2>
+
+          <div class="contact-box">
+            <h3>📞 Phone Number</h3>
+            <p>(+63) 939 7144 479</p>
+          </div>
+
+          <div class="contact-box">
+            <h3>✉️ Email</h3>
+            <p>miingvaliant@gmail.com</p>
+          </div>
+
+          <div class="contact-box">
+            <h3>📍 Location</h3>
+            <p>Middle Quezon Hill Subdivision, Baguio City</p>
+          </div>
+
+          <!-- Social Media Icons -->
+          <div class="contact-social">
+            <a href="https://www.facebook.com/" target="_blank">
+              <img src="assets/images/soc/facebook (1).png" alt="facebook-logo">
+            </a>
+            <a href="mailto:info@example.com">
+              <img src="assets/images/soc/instagram.png" alt="gmail-logo">
+            </a>
+            <a href="https://www.linkedin.com/" target="_blank">
+              <img src="assets/images/soc/linkedin.png" alt="linkedin-logo">
+            </a>
+          </div>
+        </div>
+
+        <!-- Right Side Contact Form -->
+        <div class="contact-right">
+          <h2 class="contact-heading">Contact Us</h2>
+          <form action="mailto:info@example.com" method="post" enctype="text/plain" class="contact-form-box">
+            <input type="email" name="email" placeholder="Your Email *" required>
+            <textarea name="message" placeholder="Your Message *" required></textarea>
+            <button type="submit" class="contact-btn">Send ✈️</button>
+          </form>
+        </div>
+
       </div>
     </section>
 
-    
 
     <div class="map-container">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1913.5852419980192!2d120.57181008864467!3d16.416165738438767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3391a1003aebf95b%3A0x4cbc05568cc663f7!2sQuezon%20Hill%20road!5e0!3m2!1sen!2sph!4v1759200050674!5m2!1sen!2sph" 
