--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#about">About</a>
         <a href="#gallery">Gallery</a>
         <a href="#projects">My Projects</a>
-        <a href="#contact-section">Contact</a>
+        <a href="#contact">Contact</a>
       </div>
     </div>
   </nav>
@@ -37,7 +37,7 @@
       </p>  
     
       <div class="btn-group">
-        <a href="#contact-section" class="btn-enter">Hire Me</a>
+        <a href="#contact" class="btn-enter">Hire Me</a>
         <a href="assets/Mi-ing,Valiant-Portfolio.pdf" class="btn-enter" download>Download Resume</a>
       </div>
     </div>
@@ -271,46 +271,35 @@
           <p>This is asd </p>
         </div>  
       </div>  
-        <!-- <div class="icons">
-        <a href="https://www.facebook.com/" target="_blank">
-          <img src="assets/images/soc/facebook (1).png" alt="facebook-logo">
-        </a>
-        <a href="mailto:">
-          <img src="assets/images/soc/instagram.png" alt="gmail-logo">
-        </a>
-        <a href="https://www.linkedin.com/" target="_blank">
-          <img src="assets/images/soc/linkedin.png" alt="linkedin-logo">
-        </a> -->
     </section>
 
     <!-- Contact Section -->
-    <!-- <section id="contact" class="content-section">
+    <section id="contact" class="content-section">
       <h2>Contact</h2>
-      <p>If you’d like to get in touch, feel free to reach out via email or connect with me on LinkedIn.</p>
-      <p>Email: <a href="mailto:miingvaliant@gmail.com">miingvaliant@gmail.com</a></p>
-
-    </section> -->
-
-    <section id="contact-section">
+    </section>
+    
+    <section id="contact-section"> 
       <div class="contact-wrapper">
-
         <!-- Left Side Contact Info -->
         <div class="contact-left">
           <h2 class="contact-heading">Get In Touch With Me Now!</h2>
 
           <div class="contact-box">
-            <h3>📞 Phone Number</h3>
-            <p>(+63) 939 7144 479</p>
+            <img src="assets/images/phone-call.png">
+            <h3> Phone Number</h3>
+            <p>1231231</p>
           </div>
 
           <div class="contact-box">
-            <h3>✉️ Email</h3>
-            <p>miingvaliant@gmail.com</p>
+            <img src="email.png">
+            <h3> Email</h3>
+            <p>123@gmail.com</p>
           </div>
 
           <div class="contact-box">
-            <h3>📍 Location</h3>
-            <p>Middle Quezon Hill Subdivision, Baguio City</p>
+            <img src="assets/images/location.png">
+            <h3> Location</h3>
+            <p>123 address</p>
           </div>
 
           <!-- Social Media Icons -->
